# Goalie

./: .env.example  .gitignore  Cargo.toml  README.md  generate.sh  scaffold.sh  schema.dbml
dbml/: score_keeper.dbml
documents/: 001_picking_a_language_for_the_server.md
graphql/: schema.graphql
js/: auth.vue
migrations/2023-03-19-052009_init/: down.sql  up.sql
src/: db.rs  errors.rs  game.rs  main.rs  models.rs  schema.rs  score.rs  tests.rs  user.rs
src/auth/: auth.rs
src/game/: game.rs
src/handlers/: admin.rs  auth.rs  game.rs  game_move.rs  mod.rs  move.rs  score.rs  user.rs
src/mutation/: root.rs
src/resolvers/: score_resolver.rs
static/: index.html
tests/: graphql_test.rs  resolver_test.rs
tests-old-ignore/: add_score_test.rs  ranking_test.rs  resolver_test.rs
