[package]
name = "Goalie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.0.0-beta.8"
async-graphql = "3.0.14"
async-graphql-actix-web = "3.0.14"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }