[package]
name = "Goalie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
async-graphql = "3.0.14"
async-graphql-actix-web = "3.0.14"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = "2.0.3"
dotenv = "0.15.0"

[dev-dependencies]
graphql_client = "0.12.0"