[package]
name = "goalie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
async-graphql = "3.0.14"
async-graphql-actix-web = "3.0.14"
# sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
surf = "2.3"
juniper = "0.15.11"
warp = "0.3.3"
actix-files = "0.6.2"
bcrypt = "0.10"
env_logger = "0.10.0"
log = "0.4.17"
actix-rt = "2.8.0"
chrono = { version = "0.4.24", features = ["serde"] }
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
rusqlite = "0.28.0"

[dev-dependencies]
graphql_client = "0.12.0"
